--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^2.0.11",
+    "@react-spring/parallax": "^9.5.5",
     "apexcharts": "^3.35.5",
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.1.11",
@@ -19,7 +20,8 @@
     "next": "12.2.2",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-spring": "^9.5.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
