--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^2.0.11",
     "@react-spring/parallax": "^9.5.5",
+    "@superset-ui/embedded-sdk": "^0.1.0-alpha.7",
     "apexcharts": "^3.35.5",
+    "axios": "^1.1.3",
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.1.11",
     "headlessui": "^0.0.0",
@@ -22,7 +24,8 @@
     "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
     "react-spring": "^9.5.5",
-    "sharp": "^0.31.1"
+    "sharp": "^0.31.1",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
