--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     build: .
     ports:
       - "127.0.0.1:3000:3000"
+    env_file:
+      - ${PWD}/config/node.env
 
   nginx:
     image: nginx:latest
