fix many things

--- a/utils/requirements.txt
+++ b/utils/requirements.txt
@@ -1,9 +1,1 @@
-pytrends
-numpy
-pandas
-seaborn
-matplotlib
-python-slugify
-openpyxl
-gdown
-python-telegram-bot
+pytrends numpy pandas seaborn matplotlib python-slugify openpyxl gdown python-telegram-bot
