--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
+    "react-iframe": "^1.8.5",
     "react-spring": "^9.5.5",
     "sharp": "^0.31.1",
     "swr": "^1.3.0"
